# bztetra

./: .gitignore  LICENSE  README.md  README.pypi.md  Roadmap.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: _twod_benchmark_support.py  benchmark_compare_libtetrabz.py  benchmark_hotpaths.py  benchmark_polstat.py  benchmark_response_multiband.py  benchmark_static_polarization.py  benchmark_twod_hotpaths.py  benchmark_twod_response_multiband.py
docs/: api.md  examples.md  index.md  physics.md  quickstart.md  two_dimensional_plan.md  validation.md
examples/: plot_complex_frequency_polarization.py  plot_dblstep_dbldelta.py  plot_fermi_golden_rule.py  plot_fermigr.py  plot_lindhard.py  plot_phase_space_and_nesting.py  plot_polcmplx.py  plot_tight_binding_dos.py  plot_twod_2deg_retarded_response.py  plot_twod_2deg_retarded_response_qgrid.py  plot_twod_2deg_spectral_function.py  plot_twod_lindhard.py  plot_twod_phase_space_overlap.py  plot_twod_square_lattice_dos.py  review_dos.py  review_geometry_and_cuts.py  review_occupancy.py
src/bztetra/: __init__.py  _causality.py  _grids.py  _response_frequency.py  _response_reference.py  _response_static.py  causality.py  dos.py  formulas.py  geometry.py  occupancy.py  response.py
src/bztetra/twod/: __init__.py  _grids.py  _kernels.py  _response_kernels.py  _triangle_kernels.py  dos.py  geometry.py  occupancy.py  response.py
src/libtetra/: __init__.py
src/tetrabz/: __init__.py  _cut_kernels.py  _grids.py  _response_common.py  _response_reference.py  _response_static.py  dos.py  formulas.py  geometry.py  occupancy.py  response.py
tests/: legacy_cases.py  legacy_parity_helpers.py  legacy_shell_cases.py  test_causality.py  test_complex_frequency_response.py  test_dos.py  test_formulas.py  test_frequency_response.py  test_geometry.py  test_legacy_shell_matrix.py  test_legacy_wrapper_parity.py  test_occupancy.py  test_package.py  test_prepared_response.py  test_response.py  test_twod_dos.py  test_twod_frequency_response.py  test_twod_geometry.py  test_twod_occupancy.py  test_twod_response.py  twod_cases.py
tests/data/legacy/: README.md
