[build-system]
requires = ["hatch-vcs>=0.4", "hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bztetra"
dynamic = ["version"]
description = "Python and Numba port of libtetrabz-style tetrahedron integration routines."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "bztetra contributors"},
]
dependencies = [
  "numba>=0.61",
  "numpy>=2.0",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.9",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.28",
]
dev = [
  "matplotlib>=3.9",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bztetra"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
