[build-system]
requires = ["hatch-vcs>=0.4", "hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bztetra"
dynamic = ["version"]
description = "Python and Numba port of libtetrabz-style tetrahedron integration routines."
readme = {file = "README.pypi.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {file = "LICENSE"}
license-files = ["LICENSE"]
authors = [
  {name = "bztetra contributors"},
]
keywords = [
  "brillouin-zone",
  "density-of-states",
  "electronic-structure",
  "numba",
  "tetrahedron-method",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numba>=0.61",
  "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/skilledwolf/bztetra"
Documentation = "https://skilledwolf.github.io/bztetra/"
Repository = "https://github.com/skilledwolf/bztetra"
Issues = "https://github.com/skilledwolf/bztetra/issues"

[project.optional-dependencies]
plot = [
  "matplotlib>=3.9",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.28",
]
dev = [
  "matplotlib>=3.9",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bztetra"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/README.pypi.md",
  "/pyproject.toml",
  "/src",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
